--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -62,7 +62,7 @@
           <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
             <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
               The Best <br />
-              <span style="color: hsl(218, 81%, 75%)">for your business</span>
+              <span style="color: hsl(218, 81%, 75%)">for your Afrobeats</span>
             </h1>
             <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
               Developed with cutting-edge machine learning techniques, our model analyzes a plethora of audio features to predict which Afrobeats songs are poised for success
